fix nav on mobile

--- a/less/araport.less
+++ b/less/araport.less
@@ -20,8 +20,7 @@ header[role=banner] > .navbar {
 }
 
 #logo {
-  display: table-cell;
-  vertical-align: middle;
+  display: inline-block;
   padding-right: 10px;
 }
 
